<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#E8E8E8"


    >

        <LinearLayout
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/siomao_icon"
                app:srcCompat="@drawable/siomao_icon" />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="#FFFFFF"
                android:layout_height="match_parent"
                >

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/welcome_back_user"
                    android:textColor="@color/red_500"
                    android:textSize="25sp" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text="@string/username_user_id"/>

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/juandelacruz123"
                    android:inputType="text"
                    android:importantForAutofill="no"
                    android:textColorHighlight="@color/red_500"
                    tools:ignore="VisualLintTextFieldSize" />

                <TextView
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/black"
                    android:text="@string/password"/>

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:importantForAutofill="no"
                    android:textColorHighlight="@color/red_500"
                    tools:ignore="VisualLintTextFieldSize" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/red_500"
                    android:text="@string/login"
                    app:cornerRadius="0dp"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />

                <Button
                    android:id="@+id/register_btn"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/red_500"
                    android:text="@string/register"
                    app:cornerRadius="0dp"
                    tools:ignore="TextContrastCheck,VisualLintButtonSize" />


            </LinearLayout>




        </LinearLayout>




        
        
        
        
  
    

</RelativeLayout>